# spacex-launch-tracker

./: README.md  pyproject.toml
backend/: app.py
backend/api/: routes.py
backend/config/: config.py
backend/models/: models.py
backend/services/: launch_service.py
backend/tests/test_services/: test_launch_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: LaunchList.tsx  StatisticsDashboard.tsx
